--- a/k8s/k8s-orders.yaml
+++ b/k8s/k8s-orders.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: orders
-        image: orders-service:latest
+        image: microlabacr.azurecr.io/orders-service:latest
         env:
         - name: USERS_SERVICE_URL
           value: "http://users-service:8001/users"
@@ -26,9 +26,9 @@ kind: Service
 metadata:
   name: orders-service
 spec:
+  type: LoadBalancer
   selector:
     app: orders
   ports:
     - port: 8002
       targetPort: 8002
-  type: NodePort
